--- a/i18n/src/main/res/values/strings.xml
+++ b/i18n/src/main/res/values/strings.xml
@@ -435,6 +435,7 @@
 
       <!-- Downloads section -->
     <string name="pref_download_directory">Download location</string>
+    <string name="pref_image_download_directory">Image download location</string>
     <string name="pref_category_delete_chapters">Delete chapters</string>
     <string name="pref_remove_after_marked_as_read">After manually marked as read</string>
     <string name="pref_remove_after_read">After reading automatically delete</string>
@@ -442,7 +443,7 @@
     <string name="pref_remove_exclude_categories">Excluded categories</string>
     <string name="custom_dir">Custom location</string>
     <string name="invalid_location">Invalid location: %s</string>
-    <string name="disabled">Disabled</string>
+    <string name="disabled">Disabled </string>
     <string name="last_read_chapter">Last read chapter</string>
     <string name="second_to_last">Second to last read chapter</string>
     <string name="third_to_last">Third to last read chapter</string>
